# avro-protobuf-jsonschema

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-setup.sh  .pre-commit-validate.sh  Dockerfile  Makefile  README.md  docker-compose.yml  generate_proto.sh  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml  pre-commit.yml
app/: __init__.py  config.py  main.py
clients/: __init__.py  test_avro_endpoint.py  test_json_endpoint.sh  test_protobuf_endpoint.py
docs/: COMMANDS.md  CONFIGURATION-UPDATES.md  PRE-COMMIT-CHECKLIST.md  PRE-COMMIT-INDEX.md  PRE-COMMIT-QUICKREF.md  PRE-COMMIT-SETUP.md  PRE-COMMIT-SUMMARY.md  PRE-COMMIT-WORKFLOW.md  PRE-COMMIT.md  PROJECT_SUMMARY.md  TESTING.md  avro-protobuf-jsonschema-context.md
examples/: __init__.py  avro_example.py  jsonschema_example.py  protobuf_example.py
schemas/: user.proto
tests/: __init__.py  test_avro_endpoint.py  test_config.py  test_health.py  test_integration.py  test_json_endpoint.py  test_protobuf_endpoint.py
